--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.2",
-    "json2csv": "^5.0.6",
-    "sequelize": "^6.13.0",
-    "sqlite3": "^5.0.2"
+    "mongoose": "^6.3.3"
   }
 }
