--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "cd frontend && npm i && npm start",
     "server": "cd backend && npm i && node index.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run client\" \"npm run server\" "
   },
   
   "repository": {
