--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL = "mongodb+srv://wharper:Jplummer1@cluster0.nsgjo.mongodb.net/ShopifyBackendChallenge?retryWrites=true&w=majority"
+PORT = 5000
