Installed bcrypt. Removed nodemon as a dependency. Added logic to signup controller, along with hashing the password.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,11 @@
   "author": "Whitney Harper",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.2",
-    "mongoose": "^6.3.3",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.3.3"
   },
   "devDependencies": {}
 }
