--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "inventory tracking application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --forceExit"
   },
   "author": "Whitney Harper",
   "license": "ISC",
@@ -16,5 +16,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "jest": "^29.0.3",
+    "superagent": "^8.0.0",
+    "supertest": "^6.2.4"
+  }
 }
