--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "inventory tracking application",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --forceExit"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Whitney Harper",
   "license": "ISC",
@@ -17,9 +17,6 @@
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "jest": "^29.0.3",
-    "superagent": "^8.0.0",
-    "supertest": "^6.2.4"
+    "babel-cli": "^6.26.0"
   }
 }
